--- a/llama3-70b/deploy-llama-3-70b-inferentia2.ipynb
+++ b/llama3-70b/deploy-llama-3-70b-inferentia2.ipynb
@@ -7,8 +7,7 @@
    "source": [
     "# Deploy Llama 3 70B on AWS Inferentia2 with Hugging Face Optimum\n",
     "\n",
-    "\n",
-    "[Llama 3](https://huggingface.co/meta-llama/Meta-Llama-3-70B-Instruct) is the latest iteration of the open-access Llama family. Llama 3 comes in two sizes: 8B for efficient deployment and development on consumer-size GPU, and 70B for large-scale AI native applications. Both come in base and instruction-tuned variants. In addition to the 4 models, a new version of Llama Guard was fine-tuned on Llama 3 8B and is released as Llama Guard 2 (safety fine-tune).\n",
+    "[Llama 3](hf.co/blog/llama3) is the latest is the open LLM from Meta, released in April 2024. It is trained on more data - 15T tokens and supports context length window up to 8K tokens and is one of the best open available LLMs. Meta fine-tuned conversational models with Reinforcement Learning from Human Feedback on over 10 million human annotations.\n",
     "\n",
     "In this blog you will learn how to deploy [/meta-llama/Meta-Llama-3-70B-Instruct](https://huggingface.co/meta-llama/Meta-Llama-3-70B-Instruct) model on AWS Inferentia2 with Hugging Face Optimum on Amazon SageMaker. We are going to use the Hugging Face LLM Inf2 Container a new purpose-built Inference Container to easily deploy LLMs on AWS Inferentia2 powered by[ Text Generation Inference](https://huggingface.co/docs/text-generation-inference/index) and [Optimum Neuron](https://huggingface.co/docs/optimum-neuron/index).\n",
     "\n",
@@ -66,9 +65,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/miniconda3/envs/dev/lib/python3.9/site-packages/scipy/__init__.py:155: UserWarning: A NumPy version >=1.18.5 and <1.25.0 is required for this version of SciPy (detected version 1.26.4\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
+      "sagemaker.config INFO - Not applying SDK defaults from location: /home/ubuntu/.config/sagemaker/config.yaml\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Couldn't call 'get_role' to get Role ARN from role name philippschmid to get Role path.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sagemaker role arn: arn:aws:iam::558105141721:role/sagemaker_execution_role\n",
+      "sagemaker session region: us-east-1\n"
+     ]
+    }
+   ],
    "source": [
     "import sagemaker\n",
     "import boto3\n",
@@ -106,8 +139,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "# TODO: Comment in when released\n",
@@ -186,8 +221,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "from huggingface_hub import HfFolder\n",
@@ -204,7 +241,7 @@
     "    \"HF_NUM_CORES\": \"24\", # number of neuron cores\n",
     "    \"HF_BATCH_SIZE\": \"4\", # batch size used to compile the model\n",
     "    \"HF_SEQUENCE_LENGTH\": \"4096\", # length used to compile the model\n",
-    "    \"HF_AUTO_CAST_TYPE\": \"fp16\",  # dtype of the model\n",
+    "    \"HF_AUTO_CAST_TYPE\": \"bf16\",  # dtype of the model\n",
     "    \"MAX_BATCH_SIZE\": \"4\", # max batch size for the model\n",
     "    \"MAX_INPUT_LENGTH\": \"4000\", # max length of input text\n",
     "    \"MAX_TOTAL_TOKENS\": \"4096\", # max length of generated text\n",
@@ -231,18 +268,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 4,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Your model is not compiled. Please compile your model before using Inferentia.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "----------------------------------------------------!"
+     ]
+    }
+   ],
    "source": [
     "# Deploy model to an endpoint\n",
     "# https://sagemaker.readthedocs.io/en/stable/api/inference/model.html#sagemaker.model.Model.deploy\n",
+    "\n",
+    "# deactivate warning since model is compiled\n",
+    "llm_model._is_compiled_model = True\n",
+    "\n",
     "llm = llm_model.deploy(\n",
     "  initial_instance_count=1,\n",
     "  instance_type=instance_type,\n",
     "  container_startup_health_check_timeout=health_check_timeout,\n",
     "  volume_size=volume_size\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -276,8 +334,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "# Prompt to generate\n",
@@ -291,7 +351,7 @@
     "    \"model\": \"meta-llama/Meta-Llama-3-70B-Instruct\", # placholder, needed\n",
     "    \"top_p\": 0.6,\n",
     "    \"temperature\": 0.9,\n",
-    "    \"max_tokens\": 512,\n",
+    "    \"max_tokens\": 50,\n",
     "    \"stop\": [\"<|eot_id|>\"],\n",
     "}"
    ]
@@ -305,11 +365,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Deep learning is a subset of machine learning that involves the use of artificial neural networks to model and solve complex problems. In a deep learning system, there are typically multiple layers of neural networks that process and transform the data, allowing the system to learn and improve its performance on a task over time.\n",
+      "\n",
+      "The key characteristics of deep learning are:\n",
+      "\n",
+      "1. **Multiple layers**: Deep learning models have multiple layers of neural networks, which allows them to learn complex patterns and representations of the data.\n",
+      "2. **Hierarchical representations**: Each layer builds on the previous one, allowing the model to learn hierarchical representations of the data, from simple to complex.\n",
+      "3. **Automatic feature learning**: Deep learning models can automatically learn features and representations from the data, without the need for manual feature engineering.\n",
+      "4. **Large amounts of data**: Deep learning models require large amounts of data to train, but they can learn to recognize patterns and make predictions with high accuracy.\n",
+      "\n",
+      "Deep learning has many applications, including:\n",
+      "\n",
+      "1. **Computer Vision**: Image recognition, object detection, image segmentation, and image generation.\n",
+      "2. **Natural Language Processing**: Language translation, text summarization, sentiment analysis, and chatbots.\n",
+      "3. **Speech Recognition**: Speech-to-text systems, voice assistants, and speech recognition systems.\n",
+      "4. **Robotics**: Control and navigation of robots, autonomous vehicles, and drones.\n",
+      "\n",
+      "Some of the key benefits of deep learning include:\n",
+      "\n",
+      "1. **High accuracy**: Deep learning models can achieve state-of-the-art performance on many tasks.\n",
+      "2. **Flexibility**: Deep learning models can be applied to a wide range of problems and domains.\n",
+      "3. **Scalability**: Deep learning models can be trained on large datasets and can handle large amounts of data.\n",
+      "\n",
+      "However, deep learning also has some challenges and limitations, including:\n",
+      "\n",
+      "1. **Computational requirements**: Deep learning models require significant computational resources and can be computationally expensive to train.\n",
+      "2. **Data requirements**: Deep learning models require large amounts of high-quality data to train.\n",
+      "3. **Interpretability**: Deep learning models can be difficult to interpret and understand, making it challenging to explain their decisions.\n",
+      "\n",
+      "Overall, deep learning is a powerful tool for modeling and solving complex problems, and it has many applications in areas such as computer vision, natural language processing, and robotics.<|eot_id|>\n"
+     ]
+    }
+   ],
    "source": [
-    "chat = llm.predict({\"messages\" :messages, **parameters})\n",
+    "chat = llm.predict({\"messages\" :messages, **parameters,\"steam\":True})\n",
     "\n",
     "print(chat[\"choices\"][0][\"message\"][\"content\"].strip())"
    ]
@@ -326,20 +424,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "# add apps directory to path ../apps/\n",
     "import sys\n",
     "sys.path.append(\"../demo\") \n",
-    "from sagemaker_chat import create_gradio_app\n",
+    "from llama3_chat import create_gradio_app\n",
     "\n",
     "# create gradio app\n",
     "create_gradio_app(\n",
     "    llm.endpoint_name,           # Sagemaker endpoint name\n",
     "    session=sess.boto_session,   # boto3 session used to send request \n",
     "    system_prompt=\"You are an helpful Assistant, called Llama 3. Knowing everyting about AWS.\",\n",
-    "    tokenizer=tokenizer,         # Tokenizer to use format prompt\n",
     "    concurrency_count=4,         # Number of concurrent requests\n",
     "    share=True,                  # Share app publicly\n",
     ")"
@@ -349,7 +448,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![gradio](./imgs/gradio.png)"
+    "![gradio](./imgs/example.png)"
    ]
   },
   {
