migrate to hardcoded image

--- a/llama3-70b/deploy-llama-3-70b-inferentia2.ipynb
+++ b/llama3-70b/deploy-llama-3-70b-inferentia2.ipynb
@@ -71,14 +71,6 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ubuntu/miniconda3/envs/dev/lib/python3.9/site-packages/scipy/__init__.py:155: UserWarning: A NumPy version >=1.18.5 and <1.25.0 is required for this version of SciPy (detected version 1.26.4\n",
-      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -90,6 +82,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/ubuntu/miniconda3/envs/dev/lib/python3.9/site-packages/scipy/__init__.py:155: UserWarning: A NumPy version >=1.18.5 and <1.25.0 is required for this version of SciPy (detected version 1.26.4\n",
+      "  warnings.warn(f\"A NumPy version >={np_minversion} and <{np_maxversion}\"\n",
       "Couldn't call 'get_role' to get Role ARN from role name philippschmid to get Role path.\n"
      ]
     },
@@ -143,7 +137,15 @@
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "llm image uri: 763104351884.dkr.ecr.us-east-1.amazonaws.com/huggingface-pytorch-tgi-inference:2.1.2-optimum0.0.22-neuronx-py310-ubuntu22.04-v1.0\n"
+     ]
+    }
+   ],
    "source": [
     "# TODO: Comment in when released\n",
     "# from sagemaker.huggingface import get_huggingface_llm_image_uri\n",
@@ -155,8 +157,8 @@
     "# )\n",
     "\n",
     "# # print ecr image uri\n",
-    "# print(f\"llm image uri: {llm_image}\")\n",
-    "llm_image = \"558105141721.dkr.ecr.us-east-1.amazonaws.com/optimum-neuron-preview:tgi-llama3\""
+    "llm_image = \"763104351884.dkr.ecr.us-east-1.amazonaws.com/huggingface-pytorch-tgi-inference:2.1.2-optimum0.0.22-neuronx-py310-ubuntu22.04-v1.0\"\n",
+    "print(f\"llm image uri: {llm_image}\")"
    ]
   },
   {
@@ -241,7 +243,8 @@
     "    \"HF_NUM_CORES\": \"24\", # number of neuron cores\n",
     "    \"HF_BATCH_SIZE\": \"4\", # batch size used to compile the model\n",
     "    \"HF_SEQUENCE_LENGTH\": \"4096\", # length used to compile the model\n",
-    "    \"HF_AUTO_CAST_TYPE\": \"bf16\",  # dtype of the model\n",
+    "    # \"HF_AUTO_CAST_TYPE\": \"bf16\",  # dtype of the model\n",
+    "    \"HF_AUTO_CAST_TYPE\": \"fp16\",  # dtype of the model\n",
     "    \"MAX_BATCH_SIZE\": \"4\", # max batch size for the model\n",
     "    \"MAX_INPUT_LENGTH\": \"4000\", # max length of input text\n",
     "    \"MAX_TOTAL_TOKENS\": \"4096\", # max length of generated text\n",
@@ -274,17 +277,10 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Your model is not compiled. Please compile your model before using Inferentia.\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "----------------------------------------------------!"
+      "----------------------------------------------------"
      ]
     }
    ],
@@ -308,7 +304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SageMaker will now create our endpoint and deploy the model to it. This can takes a 20-30 minutes, we are working on improving the deployment time."
+    "SageMaker will now create our endpoint and deploy the model to it. This can takes a 30 minutes, we are working on improving the deployment time."
    ]
   },
   {
@@ -334,11 +330,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mRunning cells with 'Python 3.9.6' requires the ipykernel package.\n",
+      "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+      "\u001b[1;31mCommand: '/usr/bin/python3 -m pip install ipykernel -U --user --force-reinstall'"
+     ]
+    }
+   ],
    "source": [
     "# Prompt to generate\n",
     "messages=[\n",
@@ -365,47 +372,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "metadata": {}
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Deep learning is a subset of machine learning that involves the use of artificial neural networks to model and solve complex problems. In a deep learning system, there are typically multiple layers of neural networks that process and transform the data, allowing the system to learn and improve its performance on a task over time.\n",
-      "\n",
-      "The key characteristics of deep learning are:\n",
-      "\n",
-      "1. **Multiple layers**: Deep learning models have multiple layers of neural networks, which allows them to learn complex patterns and representations of the data.\n",
-      "2. **Hierarchical representations**: Each layer builds on the previous one, allowing the model to learn hierarchical representations of the data, from simple to complex.\n",
-      "3. **Automatic feature learning**: Deep learning models can automatically learn features and representations from the data, without the need for manual feature engineering.\n",
-      "4. **Large amounts of data**: Deep learning models require large amounts of data to train, but they can learn to recognize patterns and make predictions with high accuracy.\n",
-      "\n",
-      "Deep learning has many applications, including:\n",
-      "\n",
-      "1. **Computer Vision**: Image recognition, object detection, image segmentation, and image generation.\n",
-      "2. **Natural Language Processing**: Language translation, text summarization, sentiment analysis, and chatbots.\n",
-      "3. **Speech Recognition**: Speech-to-text systems, voice assistants, and speech recognition systems.\n",
-      "4. **Robotics**: Control and navigation of robots, autonomous vehicles, and drones.\n",
-      "\n",
-      "Some of the key benefits of deep learning include:\n",
-      "\n",
-      "1. **High accuracy**: Deep learning models can achieve state-of-the-art performance on many tasks.\n",
-      "2. **Flexibility**: Deep learning models can be applied to a wide range of problems and domains.\n",
-      "3. **Scalability**: Deep learning models can be trained on large datasets and can handle large amounts of data.\n",
-      "\n",
-      "However, deep learning also has some challenges and limitations, including:\n",
-      "\n",
-      "1. **Computational requirements**: Deep learning models require significant computational resources and can be computationally expensive to train.\n",
-      "2. **Data requirements**: Deep learning models require large amounts of high-quality data to train.\n",
-      "3. **Interpretability**: Deep learning models can be difficult to interpret and understand, making it challenging to explain their decisions.\n",
-      "\n",
-      "Overall, deep learning is a powerful tool for modeling and solving complex problems, and it has many applications in areas such as computer vision, natural language processing, and robotics.<|eot_id|>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "chat = llm.predict({\"messages\" :messages, **parameters,\"steam\":True})\n",
     "\n",
@@ -448,7 +419,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![gradio](./imgs/example.png)"
+    "![gradio](./imgs/llama3.png)"
    ]
   },
   {
@@ -465,7 +436,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "!git clone https://github.com/philschmid/llmperf.git\n",
@@ -484,16 +457,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "# tell llmperf that we are using the messages api\n",
     "!MESSAGES_API=true python llmperf/token_benchmark_ray.py \\\n",
     "--model {llm.endpoint_name} \\\n",
     "--llm-api \"sagemaker\" \\\n",
-    "--max-num-completed-requests 500 \\\n",
+    "--max-num-completed-requests 50 \\\n",
     "--timeout 600 \\\n",
-    "--num-concurrent-requests 25 \\\n",
+    "--num-concurrent-requests 1 \\\n",
     "--results-dir \"results\""
    ]
   },
@@ -507,7 +482,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "import glob\n",
@@ -517,7 +494,7 @@
     "with open(glob.glob(f'results/*summary.json')[0], 'r') as file:\n",
     "    data = json.load(file)\n",
     "\n",
-    "print(\"Concurrent requests: 25\")\n",
+    "print(\"Concurrent requests: 1\")\n",
     "print(f\"Avg. Input token length: {data['mean_input_tokens']}\")\n",
     "print(f\"Avg. Output token length: {data['mean_output_tokens']}\")\n",
     "print(f\"Avg. First-Time-To-Token: {data['results_ttft_s_mean']*1000:.2f}ms\")\n",
@@ -529,11 +506,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Results with 250 token generation: \n",
+    "Results with 150 token generation: \n",
     "```bash\n",
-    "Llama 3 70B results on inf2.48xlarge:\n",
-    "Throughput: 42.23 tokens/s\n",
-    "Latency p(50): 88.80 ms/token\n",
+    "Concurrent requests: 5\n",
+    "Avg. Input token length: 550\n",
+    "Avg. Output token length: 150\n",
+    "Avg. First-Time-To-Token: 5505.33ms\n",
+    "Avg. Thorughput: 132.8 tokens/sec\n",
+    "Avg. Latency: 23.46ms/token\n",
     "```\n",
     "\n",
     "Thats it! We successfully deployed, tested and benchmarked Llama 3 70B on AWS Inferentia2. The benchmark is not a full representation of the model performance, but it gives you a first good indication. If you plan to use the model in production, we recommend to run a longer and closer to your production benchmark, modify the number of replicas see ([Scale LLM Inference on Amazon SageMaker with Multi-Replica Endpoints](https://www.philschmid.de/sagemaker-multi-replicahttps://www.philschmid.de/sagemaker-multi-replica)) and most importantly test the model with your own data."
@@ -558,6 +538,13 @@
     "llm.delete_model()\n",
     "llm.delete_endpoint()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -576,7 +563,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.6"
   },
   "orig_nbformat": 4,
   "vscode": {
