--- a/llama3-70b/deploy-llama-3-70b-inferentia2.ipynb
+++ b/llama3-70b/deploy-llama-3-70b-inferentia2.ipynb
@@ -52,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install \"sagemaker>=2.199.0\" gradio transformers --upgrade --quiet"
+    "!pip install \"sagemaker>=2.199.0\" \"gradio<4\" transformers --upgrade --quiet"
    ]
   },
   {
@@ -100,9 +100,7 @@
    "source": [
     "## 2. Retrieve the new Hugging Face LLM Inf2 DLC\n",
     "\n",
-    "The new Hugging Face TGI Neuronx DLCs can be used to run inference on AWS Inferentia2. You can use the `get_huggingface_llm_image_uri` method of the `sagemaker` SDK to retrieve the appropriate Hugging Face TGI Neuronx DLC URI based on your desired `backend`, `session`, `region`, and `version`. You can find all the available versions [here](https://github.com/aws/deep-learning-containers/releases?q=tgi+AND+neuronx&expanded=true).\n",
-    "\n",
-    "*Note: At the time of writing this blog post the latest version of the Hugging Face LLM DLC is not yet available via the `get_huggingface_llm_image_uri` method. We are going to use the raw container uri instead.*\n"
+    "The new Hugging Face TGI Neuronx DLCs can be used to run inference on AWS Inferentia2. You can use the `get_huggingface_llm_image_uri` method of the `sagemaker` SDK to retrieve the appropriate Hugging Face TGI Neuronx DLC URI based on your desired `backend`, `session`, `region`, and `version`. You can find all the available versions [here](https://github.com/aws/deep-learning-containers/releases?q=tgi+AND+neuronx&expanded=true)."
    ]
   },
   {
@@ -114,16 +112,14 @@
    "outputs": [],
    "source": [
     "# TODO: Comment in when released\n",
-    "# from sagemaker.huggingface import get_huggingface_llm_image_uri\n",
+    "from sagemaker.huggingface import get_huggingface_llm_image_uri\n",
     "\n",
-    "# # retrieve the llm image uri\n",
-    "# llm_image = get_huggingface_llm_image_uri(\n",
-    "#   \"huggingface-neuronx\",\n",
-    "#   version=\"0.0.22\"\n",
-    "# )\n",
+    "# retrieve the llm image uri\n",
+    "llm_image = get_huggingface_llm_image_uri(\n",
+    "  \"huggingface-neuronx\",\n",
+    "  version=\"0.0.22\"\n",
+    ")\n",
     "\n",
-    "# # print ecr image uri\n",
-    "llm_image = \"763104351884.dkr.ecr.us-east-1.amazonaws.com/huggingface-pytorch-tgi-inference:2.1.2-optimum0.0.22-neuronx-py310-ubuntu22.04-v1.0\"\n",
     "print(f\"llm image uri: {llm_image}\")"
    ]
   },
@@ -243,9 +239,6 @@
    },
    "outputs": [],
    "source": [
-    "# Deploy model to an endpoint\n",
-    "# https://sagemaker.readthedocs.io/en/stable/api/inference/model.html#sagemaker.model.Model.deploy\n",
-    "\n",
     "# deactivate warning since model is compiled\n",
     "llm_model._is_compiled_model = True\n",
     "\n",
@@ -262,7 +255,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "SageMaker will now create our endpoint and deploy the model to it. This can takes a 30 minutes, we are working on improving the deployment time."
+    "SageMaker will now create our endpoint and deploy the model to it. This can takes a 30-40 minutes, we are working on improving the deployment time."
    ]
   },
   {
@@ -284,17 +277,6 @@
     "  ]\n",
     "}\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sagemaker.huggingface import HuggingFacePredictor\n",
-    "\n",
-    "llm = HuggingFacePredictor(endpoint_name=\"huggingface-pytorch-tgi-inference-ml-in-2024-05-14-09-50-18-016\")"
    ]
   },
   {
@@ -407,7 +389,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we can run the benchmark with the following command. We are going to benchmark using `25` concurrent users and max `500` requests. The benchmark will measure `first-time-to-token`, `latency (ms/token)` and `throughput (tokens/s)` full details can be found in the `results` folder\n",
+    "Now we can run the benchmark with the following command. We are going to benchmark using `5` concurrent users and max `50` requests. The benchmark will measure `first-time-to-token`, `latency (ms/token)` and `throughput (tokens/s)` full details can be found in the `results` folder\n",
     "\n",
     "_🚨Important🚨: This benchmark was initiatied from Europe, while the endpoint runs in us-east-1. This has significant impact on the `first-time-to-token` metric, since it includes the network communication. If you want to measure the `first-time-to-token` correctly, you need to run the benchmark on the same host or your production region._"
    ]
@@ -426,7 +408,7 @@
     "--llm-api \"sagemaker\" \\\n",
     "--max-num-completed-requests 50 \\\n",
     "--timeout 600 \\\n",
-    "--num-concurrent-requests 1 \\\n",
+    "--num-concurrent-requests 5 \\\n",
     "--results-dir \"results\""
    ]
   },
@@ -452,7 +434,7 @@
     "with open(glob.glob(f'results/*summary.json')[0], 'r') as file:\n",
     "    data = json.load(file)\n",
     "\n",
-    "print(\"Concurrent requests: 1\")\n",
+    "print(\"Concurrent requests: 5\")\n",
     "print(f\"Avg. Input token length: {data['mean_input_tokens']}\")\n",
     "print(f\"Avg. Output token length: {data['mean_output_tokens']}\")\n",
     "print(f\"Avg. First-Time-To-Token: {data['results_ttft_s_mean']*1000:.2f}ms\")\n",
@@ -489,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
